<resources>
    <string name="app_name">CalculatorLab1_KCook</string>
    <string name="input_number">input number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="Clear">C</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="title">Assignment 1</string>
    <string name="answer">Answer goes here</string>
    <string name="history">history</string>
    <string name="standard">Standard - No history</string>
    <string name="advanced">Advanced with History</string>
</resources>