<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lavender"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/Navy"
        android:textSize="30sp"

        />

    <TextView
        android:id="@+id/answer_display"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:hint="@string/answer"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:weightSum="4">

        <Button
            android:id="@+id/one_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/MintCream"
            android:text="@string/one"
            android:textColor="@color/Navy"
            android:textSize="30sp"

             />

        <Button
            android:id="@+id/two_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/two"
            android:layout_weight="1"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/three_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/three"
            android:layout_weight="1"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/plus"
            android:layout_weight="1"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>


        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:weightSum="4">


        <Button
            android:id="@+id/four_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/four"
            android:layout_weight="1"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/five_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/five"
            android:layout_weight="1"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/six_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/six"
            android:layout_weight="1"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/minus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/minus"
            android:layout_weight="4"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:weightSum="4">

        <Button
            android:id="@+id/seven_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/seven"
            android:layout_weight="7"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/eight_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/eight"
            android:layout_weight="1"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/nine_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/nine"
            android:layout_weight="1"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/multiply_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:backgroundTint="@color/MintCream"
            android:text="@string/multiply"
            android:textColor="@color/Navy"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:weightSum="4">
        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/Clear"
            android:layout_weight="4"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/zero_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/zero"
            android:layout_weight="1"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/equals_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/equals"
            android:layout_weight="4"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/divide_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/divide"
            android:layout_weight="4"
            android:textColor="@color/Navy"
            android:backgroundTint="@color/MintCream"
            style="?android:attr/buttonBarButtonStyle"/>


    </LinearLayout>





    </LinearLayout>